--- a/Broke-games/Home.css
+++ b/Broke-games/Home.css
@@ -1,12 +1,28 @@
 
+
+
 #navbar {
 	position: sticky;
 	top: 0;
 	overflow: hidden;
-	background-color: #333;
+	background: #333;
 	border-radius: 10px;
 	width: 100%;
 	/* ADD this to fix float collapse */
 	display: flex;
 	justify-content: left;	
+}
+
+#navbar a{
+	padding: 14px;
+	text-decoration: none;
+	color: white;
+	font-weight: bold ;
+}
+
+#selected-nav {
+	margin-right: 15px;
+	margin-left: 5px;
+	border-radius: 5px;
+	background-color: #f6d365 ;
 }
